# bookshop

./: README.md
BD_course/: CMakeLists.txt  book.h  bookcardwidget.cpp  bookcardwidget.h  bookcardwidget.ui  bookcardwidget_old.ui  bookcardwidget_old2.ui  bookcardwidget_old3.ui  db_connector.cpp  db_connector.h  db_inserter.cpp  db_inserter.h  db_queries.cpp  db_queries.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapdialog.cpp  mapdialog.h  mapdialog.ui  registration_service.cpp  registration_service.h  registration_window.cpp  registration_window.h  registration_window.ui
